fix spacing for consumer-profiles-filters.component nav bar

--- a/src/app/dashboard/components/consumer-profiles-filters/consumer-profiles-filters.component.scss
+++ b/src/app/dashboard/components/consumer-profiles-filters/consumer-profiles-filters.component.scss
@@ -6,9 +6,8 @@
     margin-left: -11px;
     
     .a-container {
-        margin-right: auto;
-        margin-left: auto;
-        width: fit-content;
+        margin-right: 10px;
+        margin-left: 14px;
 
         a.category {
             opacity: 0.75;
@@ -32,7 +31,7 @@
             
             .underline {
                 display: block;
-                margin-top: 2px;
+                margin-top: 3px;
                 width: 100%;
                 height: 2px;
                 background-color: #ec008c;
